Updated readme to include some nice screenshots

--- a/README.rdoc
+++ b/README.rdoc
@@ -3,3 +3,6 @@
 Feeling sick? Enter your symptoms. Get back the worst disease possible.
 
 Hypochondriapp is a spoof on and exploration of cyberchondria.
+
+![alt tag](screenshot1.png)
+![alt tag](screenshot_2.png)
